--- a/catch-of-the-day/package.json
+++ b/catch-of-the-day/package.json
@@ -25,8 +25,7 @@
     "react-router": "4.0.0-alpha.4"
   },
   "scripts": {
-    "start": "react-scripts start", "start": "node server.js", // serves the application
-    "heroku-postbuild": "webpack -p", // runs after installation
+    "start": "react-scripts start",
     "watch": "concurrently --names \"webpack, stylus\" --prefix name \"npm run start\" \"npm run styles:watch\"",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
